@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.0.25"
+  VERSION = "1.0.26"
 end
