@@ -1,7 +1,8 @@
 h1. CHANGELOG
 
-h2. 1.0.26 unreleased
+h2. 1.0.26  November 17, 2011
 
+* improve logic for displaying navigation in subdomains recipe
 * update gem 'capybara' from 1.1.1 to 1.1.2
 
 h2. 1.0.25 November 14, 2011
